--- a/package.json
+++ b/package.json
@@ -19,11 +19,13 @@
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-native": "0.73.6",
+    "react-native-dropdown-select-list": "^2.0.5",
     "react-native-gesture-handler": "~2.14.0",
     "react-native-paper": "4.9.2",
     "react-native-reanimated": "~3.6.2",
     "react-native-safe-area-context": "4.8.2",
     "react-native-screens": "~3.29.0",
+    "react-native-select-dropdown": "^4.0.1",
     "react-native-swipeable": "^0.6.0",
     "react-native-web": "~0.19.6"
   },
