--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "pokemon-squirtle",
+    "name": "aep-controle-estoque",
     "slug": "snack-15aefb08-4c3b-4ca1-9d75-b4a50cc36e76",
     "version": "1.0.0",
     "orientation": "portrait",
